--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <a href="#">
         <!-- <h1 class="logo"></h1> -->
-        <img class="logoimg" src="/images/LOGO.png" alt="">
+        <img class="logoimg" src="./images/LOGO.png" alt="">
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
